--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
-name =			iarduino Pressure BMP (датчики давления)
-version =		2.0.2
+name =			iarduino_Pressure_BMP
+version =		2.0.3
 author =		iarduino <shop@iarduino.ru>
 maintainer =	Панькин Павел <shop@iarduino.ru>
 sentence =		Библиотека для работы с датчиками атмосферного давления и температуры BMP180 и(или) BMP280.
 paragraph =		Библиотека позволяет считывать температуру окружающей среды, атмосферное давление и высоту от изначально указанной, с датчиков BMP180 или BMP280. Преимуществом данной библиотеки является возможность заменять датчики BMP180 / BMP280 без изменения скетча и схемы включения.
 category =		Sensors
 url =			http://iarduino.ru/file/227.html
-architectures =	avr,esp8266,esp32
+architectures =	avr,esp8266,esp32,mbed_rp2040,renesas_uno
 includes =      iarduino_Pressure_BMP.h
